# Kovidhar---Heterogeneous-MoE-Inference-Engine-

./: .gitignore  ARCHITECTURE_RECOMMENDATIONS.md  CMakeLists.txt  README.md  REAL_NPU_VS_DUMMY_NPU.md  interactive_test.py  original-model-signature.txt
docs/: ARCHITECTURE.md  CACHE_POLICY.md  DATAFLOW.md  MEMORY_MODEL.md  README.md  THREAD_MODEL.md
python/: memory_transfer_analysis.py  model_generator.py  moe_model.py  npu_microbenchmarks.py  router_benchmark.py  validate_env.py  validate_stages.py  visualizer_server.py  weight_packer.py  wrapper.py
src/: benchmark.cpp  benchmark.h  expert_cache.cpp  expert_cache.h  inference_api.cpp  lockfree_queue.h  main.cpp  memory_manager.cpp  memory_manager.h  moe_api_common.h  prefetch_thread.cpp  prefetch_thread.h  real_inference.cpp  router_thread.cpp  router_thread.h  telemetry_state.h  visualizer_server.cpp
web/: index.html
